Entrenamiento y updates en el backend, ML con librerias y python
